support new add/remove robot messages in drakevisualizer

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -185,14 +185,25 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Visualizer with robot_id_number: 1"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Visualizer() causes the viewer to spawn a geometry or a set of geometries. \n",
     "# It returns a Visualizer, which includes all the information\n",
     "# about that loaded geometry. \n",
     "# Note that the model is initially loaded in the zero configuration \n",
     "# (that is, its position and rotation are all zeros)\n",
-    "model = Visualizer(box);"
+    "model = Visualizer(box)"
    ]
   },
   {
@@ -223,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -235,7 +246,7 @@
        "  1 => DrakeVisualizer.GeometryData[DrakeVisualizer.GeometryData{CoordinateTran…"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -269,7 +280,7 @@
        " DrakeVisualizer.GeometryData{CoordinateTransformations.IdentityTransformation,GeometryTypes.HyperRectangle{3,Float64}}(GeometryTypes.HyperRectangle{3,Float64}(Vec(0.0,0.0,0.0),Vec(1.0,1.0,1.0)),CoordinateTransformations.IdentityTransformation(),RGBA{Float64}(1.0,0.0,0.0,0.5))"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -293,7 +304,7 @@
        "DrakeVisualizer.GeometryData{CoordinateTransformations.IdentityTransformation,GeometryTypes.HyperRectangle{3,Float64}}(GeometryTypes.HyperRectangle{3,Float64}(Vec(0.0,0.0,0.0),Vec(1.0,1.0,1.0)),CoordinateTransformations.IdentityTransformation(),RGBA{Float64}(1.0,0.0,0.0,0.5))"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -317,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -332,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -349,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -364,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -383,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -397,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -428,9 +439,9 @@
        "nothing"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 16,
      "metadata": {
-      "comm_id": "9bc9c7a7-6452-4f8b-be6c-ba6e14f5a1d0",
+      "comm_id": "e208ef3f-e426-497d-8b97-c644ea5fbdab",
       "reactive": true
      },
      "output_type": "execute_result"
@@ -445,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -461,9 +472,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -476,9 +487,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 19,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -489,19 +500,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: imported binding for cat overwritten in module Main\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Of course, we can draw much more interesting geometries than \n",
     "# just simple boxes. Let's load a 3D mesh and visualize it:\n",
@@ -514,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -522,12 +525,10 @@
     {
      "data": {
       "text/plain": [
-       "DrakeVisualizer.Visualizer{Int64}(DataStructures.OrderedDict(1=>DrakeVisualizer.GeometryData[DrakeVisualizer.GeometryData{CoordinateTransformations.IdentityTransformation,GeometryTypes.HomogenousMesh{FixedSizeArrays.Point{3,Float64},GeometryTypes.Face{3,Int64,0},Void,Void,Void,Void,Void}}(HomogenousMesh(\n",
-       "    vertices: 6945xFixedSizeArrays.Point{3,Float64},     faces: 13260xGeometryTypes.Face{3,Int64,0}, )\n",
-       ",CoordinateTransformations.IdentityTransformation(),RGBA{Float64}(1.0,0.0,0.0,0.5))]),1,PyLCM.LCM(PyObject <LCM object at 0x3174596c0>))"
+       "Visualizer with robot_id_number: 1"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -557,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -575,14 +576,12 @@
     {
      "data": {
       "text/plain": [
-       "DrakeVisualizer.Visualizer{Int64}(DataStructures.OrderedDict(1=>DrakeVisualizer.GeometryData[DrakeVisualizer.GeometryData{CoordinateTransformations.IdentityTransformation,GeometryTypes.HomogenousMesh{FixedSizeArrays.Point{3,Float64},GeometryTypes.Face{3,Int64,0},Void,Void,Void,Void,Void}}(HomogenousMesh(\n",
-       "    vertices: 6945xFixedSizeArrays.Point{3,Float64},     faces: 13260xGeometryTypes.Face{3,Int64,0}, )\n",
-       ",CoordinateTransformations.IdentityTransformation(),RGBA{Float64}(1.0,0.0,0.0,0.5))]),1,PyLCM.LCM(PyObject <LCM object at 0x3174598a0>))"
+       "Visualizer with robot_id_number: 1"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 22,
      "metadata": {
-      "comm_id": "289caec4-7ef3-4300-b631-b1f8055f0528",
+      "comm_id": "f0c19996-754d-43f9-bb68-3aad0ce6573c",
       "reactive": true
      },
      "output_type": "execute_result"
@@ -600,7 +599,7 @@
     "\n",
     "@manipulate for iso_level in linspace(-1, 1, 51)\n",
     "    geometry = contour_mesh(f, lower_bound, upper_bound, iso_level)\n",
-    "    model = Visualizer(geometry);\n",
+    "    model = Visualizer(geometry)\n",
     "end\n",
     "\n",
     "# Note that for high iso_level values our geometry gets cut off at the\n",
@@ -609,24 +608,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "vis1 = Visualizer with robot_id_number: 1\n",
+      "vis2 = Visualizer with robot_id_number: 2\n"
+     ]
+    }
+   ],
    "source": [
     "# It is also possible to visualize multiple robots at the same time,\n",
-    "# while sending separate draw() commands for each robot. To do that,\n",
-    "# we construct two Robot() objects and pass them both in to the call\n",
-    "# to Visualizer. This will return *two* visualizers, which we can use\n",
-    "# to draw each robot separately:\n",
+    "# while sending separate draw() commands for each robot. Internally,\n",
+    "# each robot is identified by it's ID number, so we just have to give\n",
+    "# the two robots different ID numbers:\n",
     "\n",
-    "vis1, vis2 = Visualizer([Robot([link1]), Robot([link2])]);"
+    "vis1 = Visualizer(link1, 1)\n",
+    "vis2 = Visualizer(link2, 2)\n",
+    "@show vis1 vis2;"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -647,9 +656,9 @@
        "nothing"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 24,
      "metadata": {
-      "comm_id": "80be76fa-bbbb-44cf-8384-0d8ea3c7466b",
+      "comm_id": "ece48f69-24af-46d0-b00c-cd29b2986546",
       "reactive": true
      },
      "output_type": "execute_result"
@@ -665,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -686,9 +695,9 @@
        "nothing"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 25,
      "metadata": {
-      "comm_id": "4e683c8f-f3b9-4edf-8f3b-91dec9685490",
+      "comm_id": "58fe5e0f-800b-4321-baa1-add0144ec6e5",
       "reactive": true
      },
      "output_type": "execute_result"
@@ -703,22 +712,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "# And we can delete one of the robots if we want to:\n",
+    "destroy!(vis1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Or delete all the robots at once:\n",
+    "destroyall()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
    "source": [
     "# Close the viewer:\n",
     "# kill(proc)"
@@ -739,45 +761,38 @@
   },
   "widgets": {
    "state": {
-    "113f5a4a-38cd-4770-a3dd-2f277f8449f6": {
+    "1c9f5980-718c-4725-900d-bb4e38f961ed": {
+     "views": [
+      {
+       "cell_index": 25
+      }
+     ]
+    },
+    "36f2ea9a-7be8-40b0-a56c-a127b5bf218d": {
      "views": [
       {
        "cell_index": 16
       }
      ]
     },
-    "12c6e479-87d5-4126-a117-d3c4d86e53da": {
-     "views": [
-      {
-       "cell_index": 16
-      }
-     ]
-    },
-    "3607e992-d999-4b56-8ab8-ebd6aa5fed73": {
-     "views": [
-      {
-       "cell_index": 22
-      }
-     ]
-    },
-    "935fbdec-0c0e-47eb-a80a-721c0bea52fd": {
-     "views": [
-      {
-       "cell_index": 16
-      }
-     ]
-    },
-    "9d9ba1a3-79b1-418f-a03a-9bdba3f95b6c": {
+    "4153c1b4-88fe-4221-aef9-4bdfe28a1404": {
      "views": [
       {
        "cell_index": 24
       }
      ]
     },
-    "b95bd01c-cb2b-44d1-b586-ca82f6d7f901": {
+    "b4437a5e-fd35-4cb8-8dc8-18a51d8f90a6": {
      "views": [
       {
-       "cell_index": 25
+       "cell_index": 22
+      }
+     ]
+    },
+    "d2a3c705-a7cc-49e3-a0a6-4d36aae32940": {
+     "views": [
+      {
+       "cell_index": 16
       }
      ]
     }
