remove VIEWER_REMOVE_ROBOT feature

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -712,26 +712,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# And we can delete one of the robots if we want to:\n",
-    "destroy!(vis1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# Or delete all the robots at once:\n",
-    "destroyall()"
+    "# Clear all our robots\n",
+    "clear()"
    ]
   },
   {
@@ -758,46 +746,6 @@
    "mimetype": "application/julia",
    "name": "julia",
    "version": "0.5.0"
-  },
-  "widgets": {
-   "state": {
-    "1c9f5980-718c-4725-900d-bb4e38f961ed": {
-     "views": [
-      {
-       "cell_index": 25
-      }
-     ]
-    },
-    "36f2ea9a-7be8-40b0-a56c-a127b5bf218d": {
-     "views": [
-      {
-       "cell_index": 16
-      }
-     ]
-    },
-    "4153c1b4-88fe-4221-aef9-4bdfe28a1404": {
-     "views": [
-      {
-       "cell_index": 24
-      }
-     ]
-    },
-    "b4437a5e-fd35-4cb8-8dc8-18a51d8f90a6": {
-     "views": [
-      {
-       "cell_index": 22
-      }
-     ]
-    },
-    "d2a3c705-a7cc-49e3-a0a6-4d36aae32940": {
-     "views": [
-      {
-       "cell_index": 16
-      }
-     ]
-    }
-   },
-   "version": "1.2.0"
   }
  },
  "nbformat": 4,
