add any_open_windows, use it in demo notebook

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -152,8 +152,8 @@
    },
    "outputs": [],
    "source": [
-    "# Run the following command to launch the viewer application:\n",
-    "# proc = DrakeVisualizer.new_window()"
+    "# Launch the viewer application if it isn't running already:\n",
+    "DrakeVisualizer.any_open_windows() || DrakeVisualizer.new_window();"
    ]
   },
   {
