improve loading and support meshes

--- a/viewer2.ipynb
+++ b/viewer2.ipynb
@@ -2,16 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 37,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO: Recompiling stale cache file /Users/rdeits/.julia/lib/v0.5/MeshIO.ji for module MeshIO.\n"
+     ]
+    }
+   ],
    "source": [
     "using GeometryTypes\n",
     "using CoordinateTransformations\n",
     "using ColorTypes\n",
-    "using PyLCM"
+    "using PyLCM\n",
+    "using MeshIO\n",
+    "using FileIO"
    ]
   },
   {
@@ -42,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 80,
    "metadata": {
     "collapsed": false
    },
@@ -75,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 81,
    "metadata": {
     "collapsed": false
    },
@@ -87,7 +97,7 @@
        "  \"box\" => DrakeVisualizer.GeometryData{GeometryTypes.HyperRectangle{3,Int64},C…"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 82,
    "metadata": {
     "collapsed": false
    },
@@ -108,10 +118,10 @@
     {
      "data": {
       "text/plain": [
-       "DrakeVisualizer.Visualizer(PyLCM.LCM(PyObject <LCM object at 0x3248a8ed0>),DataStructures.OrderedDict{String,Dict{String,DrakeVisualizer.GeometryData}}(),DataStructures.OrderedDict{String,CoordinateTransformations.Transformation}(),DrakeVisualizer.CommandQueue(Set{String}(),Set{String}(),Set{String}()))"
+       "DrakeVisualizer.Visualizer(PyLCM.LCM(PyObject <LCM object at 0x31f859120>),DataStructures.OrderedDict{String,Dict{String,DrakeVisualizer.GeometryData}}(),DataStructures.OrderedDict{String,CoordinateTransformations.Transformation}(),DrakeVisualizer.CommandQueue(Set{String}(),Set{String}(),Set{String}()))"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 83,
    "metadata": {
     "collapsed": false
    },
@@ -131,60 +141,161 @@
     {
      "data": {
       "text/plain": [
-       "Dict{String,DrakeVisualizer.GeometryData} with 1 entry:\n",
-       "  \"box\" => DrakeVisualizer.GeometryData{GeometryTypes.HyperRectangle{3,Int64},C…"
+       "Set(String[\"link1\"])"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "vis.links[\"link1\"] = link"
+    "DrakeVisualizer.queue_load!(vis, \"link1\", link)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 84,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "encoded = \"{\\\"data\\\":{\\\"commands\\\":[{\\\"pose\\\":{\\\"translation\\\":[1.0,2.0,3.0],\\\"quaternion\\\":[1.0,0.0,0.0,0.0]},\\\"path\\\":[\\\"link1\\\"]}]},\\\"timestamp\\\":597166215888331,\\\"type\\\":\\\"draw\\\"}\"\n",
-      "msgdata = Dict{String,Any}(Pair{String,Any}(\"status\",0),Pair{String,Any}(\"data\",Dict{String,Any}(Pair{String,Any}(\"drew_paths\",Any[Any[\"link1\"]]))),Pair{String,Any}(\"timestamp\",597088769655772))\n",
-      "vis.queue = DrakeVisualizer.CommandQueue(Set{String}(),Set{String}(),Set{String}())\n"
-     ]
+     "data": {
+      "text/plain": [
+       "DrakeVisualizer.GeometryData{GeometryTypes.HomogenousMesh{FixedSizeArrays.Point{3,Float32},GeometryTypes.Face{3,UInt32,-1},GeometryTypes.Normal{3,Float32},Void,Void,Void,Void},CoordinateTransformations.IdentityTransformation}(HomogenousMesh(\n",
+       "    normals: 2248xGeometryTypes.Normal{3,Float32},     vertices: 2248xFixedSizeArrays.Point{3,Float32},     faces: 3954xGeometryTypes.Face{3,UInt32,-1}, )\n",
+       ",CoordinateTransformations.IdentityTransformation(),RGBA{Float64}(0.0,0.5,1.0,0.5))"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "DrakeVisualizer.draw!(vis, \"link1\", Translation([1., 2, 3]))"
+    "mesh = load(\"/Users/rdeits/.julia/v0.5/GeometryTypes/test/data/cat.obj\")\n",
+    "meshgeom = DrakeVisualizer.GeometryData(mesh, IdentityTransformation(), RGBA(0, 0.5, 1, 0.5))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 85,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "encoded = \"{\\\"data\\\":{\\\"links\\\":[{\\\"geometries\\\":[{\\\"name\\\":\\\"box\\\",\\\"parameters\\\":{\\\"lengths\\\":[1,1,1],\\\"type\\\":\\\"box\\\"},\\\"color\\\":[0.0,0.0,1.0,0.5],\\\"pose\\\":{\\\"translation\\\":[0.5,0.5,0.5],\\\"quaternion\\\":[1.0,0.0,0.0,0.0]}}],\\\"path\\\":[\\\"link1\\\"]}]},\\\"timestamp\\\":596903422995706,\\\"type\\\":\\\"load\\\"}\"\n",
-      "msgdata = Dict{String,Any}(Pair{String,Any}(\"status\",0),Pair{String,Any}(\"data\",Dict{String,Any}(Pair{String,Any}(\"loaded_paths\",Any[Any[\"link1\"]]))),Pair{String,Any}(\"timestamp\",596903422995706))\n",
-      "deleting load for path: Any[\"link1\"]\n",
-      "vis.queue = DrakeVisualizer.CommandQueue(Set{String}(),Set{String}(),Set{String}())\n"
+     "data": {
+      "text/plain": [
+       "Set(String[\"link1\",\"link2\"])"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "DrakeVisualizer.queue_load!(vis, \"link2\",)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "LoadError",
+     "evalue": "LoadError: KeyError: key \"link2\" not found\nwhile loading In[86], in expression starting on line 1",
+     "output_type": "error",
+     "traceback": [
+      "LoadError: KeyError: key \"link2\" not found\nwhile loading In[86], in expression starting on line 1",
+      "",
+      " in getindex at /Users/rdeits/.julia/v0.5/DataStructures/src/ordered_dict.jl:350 [inlined]",
+      " in (::DrakeVisualizer.##6#7{DrakeVisualizer.Visualizer})(::String) at ./<missing>:0",
+      " in collect_to!(::Array{Dict{String,Any},1}, ::Base.Generator{Set{String},DrakeVisualizer.##6#7{DrakeVisualizer.Visualizer}}, ::Int64, ::Int64) at ./array.jl:340",
+      " in collect_to_with_first!(::Array{Dict{String,Any},1}, ::Dict{String,Any}, ::Base.Generator{Set{String},DrakeVisualizer.##6#7{DrakeVisualizer.Visualizer}}, ::Int64) at ./array.jl:327",
+      " in collect(::Base.Generator{Set{String},DrakeVisualizer.##6#7{DrakeVisualizer.Visualizer}}) at ./array.jl:308",
+      " in command_data at /Users/rdeits/.julia/v0.5/DrakeVisualizer/src/json_conversions.jl:144 [inlined]",
+      " in serialize(::DrakeVisualizer.Visualizer, ::DrakeVisualizer.Load, ::Set{String}) at /Users/rdeits/.julia/v0.5/DrakeVisualizer/src/json_conversions.jl:132",
+      " in publish!(::DrakeVisualizer.Visualizer, ::DrakeVisualizer.Load, ::Set{String}) at /Users/rdeits/.julia/v0.5/DrakeVisualizer/src/json_conversions.jl:94",
+      " in publish!(::DrakeVisualizer.Visualizer) at /Users/rdeits/.julia/v0.5/DrakeVisualizer/src/json_conversions.jl:88"
      ]
     }
    ],
    "source": [
-    "DrakeVisualizer.load!(vis, \"link1\", link)"
+    "DrakeVisualizer.publish!(vis)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Set(String[\"link1\",\"link2\"])"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "DrakeVisualizer.queue_load!(vis, \"link2\", Dict(\"cat\" => meshgeom))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "DrakeVisualizer.draw!(vis, \"link1\", Translation([0., 0.2, 0.3]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "LoadError",
+     "evalue": "LoadError: InterruptException:\nwhile loading In[36], in expression starting on line 1",
+     "output_type": "error",
+     "traceback": [
+      "LoadError: InterruptException:\nwhile loading In[36], in expression starting on line 1",
+      "",
+      " in #_pycall#62(::Array{Any,1}, ::Function, ::PyCall.PyObject, ::Int64, ::Vararg{Int64,N}) at /Users/rdeits/.julia/v0.5/PyCall/src/PyCall.jl:556",
+      " in _pycall(::PyCall.PyObject, ::Int64, ::Vararg{Int64,N}) at /Users/rdeits/.julia/v0.5/PyCall/src/PyCall.jl:534",
+      " in #pycall#65(::Array{Any,1}, ::Function, ::PyCall.PyObject, ::Type{PyCall.PyObject}, ::Int64, ::Vararg{Int64,N}) at /Users/rdeits/.julia/v0.5/PyCall/src/PyCall.jl:565",
+      " in pycall(::PyCall.PyObject, ::Type{PyCall.PyObject}, ::Int64, ::Vararg{Int64,N}) at /Users/rdeits/.julia/v0.5/PyCall/src/PyCall.jl:565",
+      " in publish!(::DrakeVisualizer.Visualizer, ::DrakeVisualizer.Draw, ::Set{String}) at /Users/rdeits/.julia/v0.5/DrakeVisualizer/src/json_conversions.jl:101",
+      " in publish!(::DrakeVisualizer.Visualizer) at /Users/rdeits/.julia/v0.5/DrakeVisualizer/src/json_conversions.jl:91",
+      " in draw!(::DrakeVisualizer.Visualizer, ::String, ::CoordinateTransformations.LinearMap{Rotations.AngleAxis{Float64}}) at /Users/rdeits/.julia/v0.5/DrakeVisualizer/src/json_conversions.jl:70",
+      " in macro expansion; at ./In[36]:3 [inlined]",
+      " in anonymous at ./<missing>:?"
+     ]
+    }
+   ],
+   "source": [
+    "while true\n",
+    "    for x in linspace(0, 2*pi)\n",
+    "        DrakeVisualizer.draw!(vis, \"link1\", LinearMap(AngleAxis(x, 0, 0, 1)))\n",
+    "#         sleep(0.01)\n",
+    "    end\n",
+    "end"
    ]
   },
   {
