total rewrite to new version with arbitrary path transform trees

--- a/viewer2.ipynb
+++ b/viewer2.ipynb
@@ -2,19 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO: Recompiling stale cache file /Users/rdeits/.julia/lib/v0.5/MeshIO.ji for module MeshIO.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "using GeometryTypes\n",
     "using CoordinateTransformations\n",
@@ -52,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -85,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -93,35 +85,10 @@
     {
      "data": {
       "text/plain": [
-       "Dict{String,DrakeVisualizer.GeometryData} with 1 entry:\n",
-       "  \"box\" => DrakeVisualizer.GeometryData{GeometryTypes.HyperRectangle{3,Int64},C…"
+       "DrakeVisualizer.Visualizer(PyLCM.LCM(PyObject <LCM object at 0x31ac94cc0>),LazyTree: DrakeVisualizer.VisData(Nullable{CoordinateTransformations.Transformation}(),Nullable{DrakeVisualizer.GeometryData{G<:GeometryTypes.AbstractGeometry,C<:ColorTypes.Colorant}}()),DrakeVisualizer.CommandQueue(Array{String,1}[],Array{String,1}[],Array{String,1}[]))"
       ]
      },
-     "execution_count": 81,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "box = DrakeVisualizer.HyperRectangle(Vec(0, 0, 0), Vec(1, 1, 1))\n",
-    "geomdata = DrakeVisualizer.GeometryData(box, IdentityTransformation(), RGBA(0., 0, 1, 0.5))\n",
-    "link = DrakeVisualizer.Link(\"box\" => geomdata)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 82,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "DrakeVisualizer.Visualizer(PyLCM.LCM(PyObject <LCM object at 0x31f859120>),DataStructures.OrderedDict{String,Dict{String,DrakeVisualizer.GeometryData}}(),DataStructures.OrderedDict{String,CoordinateTransformations.Transformation}(),DrakeVisualizer.CommandQueue(Set{String}(),Set{String}(),Set{String}()))"
-      ]
-     },
-     "execution_count": 82,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -141,98 +108,59 @@
     {
      "data": {
       "text/plain": [
-       "Set(String[\"link1\"])"
+       "true"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "DrakeVisualizer.queue_load!(vis, \"link1\", link)"
+    "box = DrakeVisualizer.HyperRectangle(Vec(0, 0, 0), Vec(1, 1, 1))\n",
+    "geomdata = DrakeVisualizer.GeometryData(box, RGBA(0., 0, 1, 0.5))\n",
+    "\n",
+    "DrakeVisualizer.queue_load!(vis, [\"robot1\", \"link1\"], geomdata)\n",
+    "\n",
+    "DrakeVisualizer.publish!(vis)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "DrakeVisualizer.GeometryData{GeometryTypes.HomogenousMesh{FixedSizeArrays.Point{3,Float32},GeometryTypes.Face{3,UInt32,-1},GeometryTypes.Normal{3,Float32},Void,Void,Void,Void},CoordinateTransformations.IdentityTransformation}(HomogenousMesh(\n",
-       "    normals: 2248xGeometryTypes.Normal{3,Float32},     vertices: 2248xFixedSizeArrays.Point{3,Float32},     faces: 3954xGeometryTypes.Face{3,UInt32,-1}, )\n",
-       ",CoordinateTransformations.IdentityTransformation(),RGBA{Float64}(0.0,0.5,1.0,0.5))"
-      ]
-     },
-     "execution_count": 84,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "mesh = load(\"/Users/rdeits/.julia/v0.5/GeometryTypes/test/data/cat.obj\")\n",
-    "meshgeom = DrakeVisualizer.GeometryData(mesh, IdentityTransformation(), RGBA(0, 0.5, 1, 0.5))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 85,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Set(String[\"link1\",\"link2\"])"
-      ]
-     },
-     "execution_count": 85,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "DrakeVisualizer.queue_load!(vis, \"link2\",)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
      "ename": "LoadError",
-     "evalue": "LoadError: KeyError: key \"link2\" not found\nwhile loading In[86], in expression starting on line 1",
+     "evalue": "LoadError: InterruptException:\nwhile loading In[28], in expression starting on line 1",
      "output_type": "error",
      "traceback": [
-      "LoadError: KeyError: key \"link2\" not found\nwhile loading In[86], in expression starting on line 1",
+      "LoadError: InterruptException:\nwhile loading In[28], in expression starting on line 1",
       "",
-      " in getindex at /Users/rdeits/.julia/v0.5/DataStructures/src/ordered_dict.jl:350 [inlined]",
-      " in (::DrakeVisualizer.##6#7{DrakeVisualizer.Visualizer})(::String) at ./<missing>:0",
-      " in collect_to!(::Array{Dict{String,Any},1}, ::Base.Generator{Set{String},DrakeVisualizer.##6#7{DrakeVisualizer.Visualizer}}, ::Int64, ::Int64) at ./array.jl:340",
-      " in collect_to_with_first!(::Array{Dict{String,Any},1}, ::Dict{String,Any}, ::Base.Generator{Set{String},DrakeVisualizer.##6#7{DrakeVisualizer.Visualizer}}, ::Int64) at ./array.jl:327",
-      " in collect(::Base.Generator{Set{String},DrakeVisualizer.##6#7{DrakeVisualizer.Visualizer}}) at ./array.jl:308",
-      " in command_data at /Users/rdeits/.julia/v0.5/DrakeVisualizer/src/json_conversions.jl:144 [inlined]",
-      " in serialize(::DrakeVisualizer.Visualizer, ::DrakeVisualizer.Load, ::Set{String}) at /Users/rdeits/.julia/v0.5/DrakeVisualizer/src/json_conversions.jl:132",
-      " in publish!(::DrakeVisualizer.Visualizer, ::DrakeVisualizer.Load, ::Set{String}) at /Users/rdeits/.julia/v0.5/DrakeVisualizer/src/json_conversions.jl:94",
-      " in publish!(::DrakeVisualizer.Visualizer) at /Users/rdeits/.julia/v0.5/DrakeVisualizer/src/json_conversions.jl:88"
+      " in process_events(::Bool) at ./libuv.jl:82",
+      " in wait() at ./event.jl:147",
+      " in wait(::Condition) at ./event.jl:27",
+      " in wait(::Timer) at ./event.jl:319",
+      " in sleep(::Float64) at ./event.jl:360",
+      " in macro expansion; at ./In[28]:4 [inlined]",
+      " in anonymous at ./<missing>:?"
      ]
     }
    ],
    "source": [
-    "DrakeVisualizer.publish!(vis)"
+    "while true\n",
+    "    for x in linspace(0, 2*pi)\n",
+    "        DrakeVisualizer.draw!(vis, [\"robot1\"], LinearMap(AngleAxis(x, 0, 0, 1)))\n",
+    "        sleep(0.01)\n",
+    "    end\n",
+    "end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 44,
    "metadata": {
     "collapsed": false
    },
@@ -240,27 +168,90 @@
     {
      "data": {
       "text/plain": [
-       "Set(String[\"link1\",\"link2\"])"
+       "true"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "DrakeVisualizer.queue_load!(vis, \"link2\", Dict(\"cat\" => meshgeom))"
+    "mesh = load(\"/Users/rdeits/.julia/v0.5/GeometryTypes/test/data/cat.obj\")\n",
+    "meshgeom = DrakeVisualizer.GeometryData(mesh, RGBA(0, 0.5, 1, 0.5))\n",
+    "\n",
+    "DrakeVisualizer.load!(vis, [\"robot1\", \"link2\"], meshgeom)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "true"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "DrakeVisualizer.draw!(vis, \"link1\", Translation([0., 0.2, 0.3]))"
+    "DrakeVisualizer.draw!(vis, [\"robot1\"], Translation([1., 0.2, 0.2]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "true"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "DrakeVisualizer.draw!(vis, [\"robot1\", \"link2\"], Translation([1., 0.3, 0.3]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "true"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "DrakeVisualizer.delete!(vis, [\"robot1\"])\n",
+    "\n",
+    "pc = DrakeVisualizer.PointCloud{Vector{Float64}, RGB{Float64}}([[0, y, 0] for y in linspace(-1, 1)], Nullable(), Nullable())\n",
+    "pcgeom = DrakeVisualizer.GeometryData(pc, RGB(0., 1, 0))\n",
+    "\n",
+    "DrakeVisualizer.load!(vis, [\"pc2\"], pcgeom)"
    ]
   },
   {
@@ -277,14 +268,12 @@
      "traceback": [
       "LoadError: InterruptException:\nwhile loading In[36], in expression starting on line 1",
       "",
-      " in #_pycall#62(::Array{Any,1}, ::Function, ::PyCall.PyObject, ::Int64, ::Vararg{Int64,N}) at /Users/rdeits/.julia/v0.5/PyCall/src/PyCall.jl:556",
-      " in _pycall(::PyCall.PyObject, ::Int64, ::Vararg{Int64,N}) at /Users/rdeits/.julia/v0.5/PyCall/src/PyCall.jl:534",
-      " in #pycall#65(::Array{Any,1}, ::Function, ::PyCall.PyObject, ::Type{PyCall.PyObject}, ::Int64, ::Vararg{Int64,N}) at /Users/rdeits/.julia/v0.5/PyCall/src/PyCall.jl:565",
-      " in pycall(::PyCall.PyObject, ::Type{PyCall.PyObject}, ::Int64, ::Vararg{Int64,N}) at /Users/rdeits/.julia/v0.5/PyCall/src/PyCall.jl:565",
-      " in publish!(::DrakeVisualizer.Visualizer, ::DrakeVisualizer.Draw, ::Set{String}) at /Users/rdeits/.julia/v0.5/DrakeVisualizer/src/json_conversions.jl:101",
-      " in publish!(::DrakeVisualizer.Visualizer) at /Users/rdeits/.julia/v0.5/DrakeVisualizer/src/json_conversions.jl:91",
-      " in draw!(::DrakeVisualizer.Visualizer, ::String, ::CoordinateTransformations.LinearMap{Rotations.AngleAxis{Float64}}) at /Users/rdeits/.julia/v0.5/DrakeVisualizer/src/json_conversions.jl:70",
-      " in macro expansion; at ./In[36]:3 [inlined]",
+      " in process_events(::Bool) at ./libuv.jl:82",
+      " in wait() at ./event.jl:147",
+      " in wait(::Condition) at ./event.jl:27",
+      " in wait(::Timer) at ./event.jl:319",
+      " in sleep(::Float64) at ./event.jl:360",
+      " in macro expansion; at ./In[36]:4 [inlined]",
       " in anonymous at ./<missing>:?"
      ]
     }
@@ -292,10 +281,32 @@
    "source": [
     "while true\n",
     "    for x in linspace(0, 2*pi)\n",
-    "        DrakeVisualizer.draw!(vis, \"link1\", LinearMap(AngleAxis(x, 0, 0, 1)))\n",
-    "#         sleep(0.01)\n",
+    "        DrakeVisualizer.draw!(vis, [\"pc2\"], LinearMap(AngleAxis(x, 0, 0, 1)))\n",
+    "        sleep(0.01)\n",
     "    end\n",
     "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "true"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "DrakeVisualizer.delete!(vis, [\"pc2\"])"
    ]
   },
   {
