--- a/viewer2.ipynb
+++ b/viewer2.ipynb
@@ -6,19 +6,7 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO: Recompiling stale cache file /home/rdeits/.julia/lib/v0.5/GeometryTypes.ji for module GeometryTypes.\n",
-      "INFO: Recompiling stale cache file /home/rdeits/.julia/lib/v0.5/StaticArrays.ji for module StaticArrays.\n",
-      "INFO: Recompiling stale cache file /home/rdeits/.julia/lib/v0.5/CoordinateTransformations.ji for module CoordinateTransformations.\n",
-      "INFO: Recompiling stale cache file /home/rdeits/.julia/lib/v0.5/PyLCM.ji for module PyLCM.\n",
-      "INFO: Recompiling stale cache file /home/rdeits/.julia/lib/v0.5/MeshIO.ji for module MeshIO.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "using GeometryTypes\n",
     "using CoordinateTransformations\n",
@@ -36,13 +24,6 @@
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO: Precompiling module DrakeVisualizer.\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -56,18 +37,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO: Recompiling stale cache file /home/rdeits/.julia/lib/v0.5/DrakeVisualizer.ji for module DrakeVisualizer.\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -89,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -97,10 +71,10 @@
     {
      "data": {
       "text/plain": [
-       "DrakeVisualizer.Visualizer(DrakeVisualizer.CoreVisualizer(PyLCM.LCM(PyObject <LCM object at 0x7f7e381d7570>),LazyTree: DrakeVisualizer.VisData(CoordinateTransformations.IdentityTransformation(),DrakeVisualizer.GeometryData[]) with children: Dict(:body1=>LazyTree: DrakeVisualizer.VisData(CoordinateTransformations.IdentityTransformation(),DrakeVisualizer.GeometryData[DrakeVisualizer.GeometryData{GeometryTypes.HyperRectangle{3,Float64},ColorTypes.RGBA{Float64}}(GeometryTypes.HyperRectangle{3,Float64}(Vec(0.0,0.0,0.5),Vec(0.5,0.5,0.5)),RGBA{Float64}(1.0,0.0,0.0,0.5))])),DrakeVisualizer.CommandQueue(Array{Symbol,1}[],Array{Symbol,1}[],Array{Symbol,1}[]),true),Symbol[])"
+       "DrakeVisualizer.Visualizer(DrakeVisualizer.CoreVisualizer(PyLCM.LCM(PyObject <LCM object at 0x7f7114a09900>),LazyTree: DrakeVisualizer.VisData(CoordinateTransformations.IdentityTransformation(),DrakeVisualizer.GeometryData[]) with children: Dict(:body1=>LazyTree: DrakeVisualizer.VisData(CoordinateTransformations.IdentityTransformation(),DrakeVisualizer.GeometryData[DrakeVisualizer.GeometryData{GeometryTypes.HyperRectangle{3,Float64},ColorTypes.RGBA{Float64}}(GeometryTypes.HyperRectangle{3,Float64}(Vec(0.0,0.0,0.5),Vec(0.5,0.5,0.5)),RGBA{Float64}(1.0,0.0,0.0,0.5))])),DrakeVisualizer.CommandQueue(Array{Symbol,1}[],Array{Symbol,1}[],Array{Symbol,1}[]),true),Symbol[])"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -122,7 +96,7 @@
        "true"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -141,10 +115,10 @@
     {
      "data": {
       "text/plain": [
-       "DrakeVisualizer.Visualizer(DrakeVisualizer.CoreVisualizer(PyLCM.LCM(PyObject <LCM object at 0x7f7e381d7630>),LazyTree: DrakeVisualizer.VisData(CoordinateTransformations.IdentityTransformation(),DrakeVisualizer.GeometryData[]),DrakeVisualizer.CommandQueue(Array{Symbol,1}[],Array{Symbol,1}[],Array{Symbol,1}[]),true),Symbol[])"
+       "DrakeVisualizer.Visualizer(DrakeVisualizer.CoreVisualizer(PyLCM.LCM(PyObject <LCM object at 0x7f7114a09c60>),LazyTree: DrakeVisualizer.VisData(CoordinateTransformations.IdentityTransformation(),DrakeVisualizer.GeometryData[]),DrakeVisualizer.CommandQueue(Array{Symbol,1}[],Array{Symbol,1}[],Array{Symbol,1}[]),true),Symbol[])"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -166,7 +140,7 @@
        "DrakeVisualizer.GeometryData{GeometryTypes.HyperRectangle{3,Float64},ColorTypes.RGBA{Float64}}(GeometryTypes.HyperRectangle{3,Float64}(Vec(0.0,0.0,0.5),Vec(1.0,1.0,1.0)),RGBA{Float64}(0.0,0.0,1.0,0.5))"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -186,10 +160,10 @@
     {
      "data": {
       "text/plain": [
-       "DrakeVisualizer.Visualizer(DrakeVisualizer.CoreVisualizer(PyLCM.LCM(PyObject <LCM object at 0x7f7e381d7630>),LazyTree: DrakeVisualizer.VisData(CoordinateTransformations.IdentityTransformation(),DrakeVisualizer.GeometryData[]),DrakeVisualizer.CommandQueue(Array{Symbol,1}[],Array{Symbol,1}[],Array{Symbol,1}[]),true),Symbol[:robot1,:link1])"
+       "DrakeVisualizer.Visualizer(DrakeVisualizer.CoreVisualizer(PyLCM.LCM(PyObject <LCM object at 0x7f7114a09c60>),LazyTree: DrakeVisualizer.VisData(CoordinateTransformations.IdentityTransformation(),DrakeVisualizer.GeometryData[]),DrakeVisualizer.CommandQueue(Array{Symbol,1}[],Array{Symbol,1}[],Array{Symbol,1}[]),true),Symbol[:robot1,:link1])"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -211,7 +185,7 @@
        "true"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -239,7 +213,7 @@
       " in wait(::Condition) at ./event.jl:27",
       " in wait(::Timer) at ./event.jl:319",
       " in sleep(::Float64) at ./event.jl:360",
-      " in macro expansion; at ./In[86]:4 [inlined]",
+      " in macro expansion; at ./In[10]:4 [inlined]",
       " in anonymous at ./<missing>:?"
      ]
     }
@@ -255,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -266,7 +240,7 @@
        "true"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -289,7 +263,7 @@
        "true"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -311,7 +285,7 @@
        "true"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -333,7 +307,7 @@
        "true"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -367,7 +341,7 @@
       " in wait(::Condition) at ./event.jl:27",
       " in wait(::Timer) at ./event.jl:319",
       " in sleep(::Float64) at ./event.jl:360",
-      " in macro expansion; at ./In[93]:10 [inlined]",
+      " in macro expansion; at ./In[15]:10 [inlined]",
       " in anonymous at ./<missing>:?"
      ]
     }
@@ -389,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -400,7 +374,7 @@
        "true"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
